Admin role change works.